# MolOP

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  README.zh.md  checklit.md  makefile  mkdocs.dev.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.gitea/workflows/: build.yaml  ci.yaml
.github/workflows/: docs-build.yml  docs-deploy.yml
.opencode/skill/molop-development-workflow/: SKILL.md
.opencode/skill/molop-io-codec-development/: SKILL.md
.opencode/skill/molop-stub-generation/: SKILL.md
docs/: BaseBlockParser.md  api.md  command_line_interface.ipynb  entrypoint.md  index.md  molblock_base.md  read_file_and_extract_info.ipynb  read_files.ipynb  read_files.md  structure.md  structure_recovery_cases.ipynb  supporting_input_file_formats.md  supporting_output_file_formats.md  transform_in_gjf.ipynb
docs/architecture/: gjf_spec_coverage.md
docs/data/: replacement_demo_data.csv
docs/en/: MolBlock.md  QMBaseBlockParser.md  changelog.md  command_line_interface.ipynb  command_line_interface.md  concepts.md  contributing.md  file_batch.md  geometry.md  index.md  qc_parser_benchmark.ipynb  read_file_and_extract_info.ipynb  read_file_and_extract_info.md  read_files.ipynb  read_files.md  structure.md  structure_recover_benchmark.ipynb  structure_recovery.md  structure_recovery_cases.ipynb  structure_recovery_cases.md  supporting_output_file_formats.md  transform_in_gjf.ipynb  transform_in_gjf.md  tutorial_for_replacement.ipynb  tutorial_for_replacement.md
docs/en/design/: orca_input_model.md  qm_data_model.md
docs/en/examples/: 01-gaussian-parse-and-inspect.ipynb  02-batch-summary-filter-select.ipynb  03-transform-and-export.ipynb
docs/en/getting_started/: installation.md  quickstart.md
docs/en/reference/: api.md  format_support.md  model_fields.md  transform_behavior.md
docs/en/tutorials/: index.md
docs/javascripts/: mathjax.js
docs/zh/: BaseFileParser.md  BaseMolFileParser.md  BaseMolFrameParser.md  BaseQMFileParser.md  MolBlock.md  changelog.md  command_line_interface.ipynb  command_line_interface.md  concepts.md  contributing.md  file_base.md  file_batch.md  geometry.md  index.md  install copy.md  install.md  qc_parser_benchmark.ipynb  read_file_and_extract_info.ipynb  read_file_and_extract_info.md  read_files.ipynb  read_files.md  structure_recover_benchmark.ipynb  structure_recovery.md  structure_recovery_cases.ipynb  structure_recovery_cases.md  supporting_input_file_formats.md  supporting_output_file_formats.md  transform_in_gjf.ipynb  transform_in_gjf.md
docs/zh/design/: orca_input_model.md  qm_data_model.md
docs/zh/examples/: 01-gaussian-parse-and-inspect.ipynb  02-batch-summary-filter-select.ipynb  03-transform-and-export.ipynb
docs/zh/getting_started/: installation.md  quickstart.md
docs/zh/reference/: api.md  format_support.md  model_fields.md  transform_behavior.md
docs/zh/tutorials/: index.md
molop/: __init__.py
molop/cli/: cli.py
molop/config/: __init__.py
molop/descriptor/: descriptor.py  spms.py
molop/io/: FileBatchModelDisk.py  FileBatchParserDisk.py  __init__.py  base_parser.py  bases.py  file_batch.py  gaussian_parser.py  molop_parser.py  sdf_parser.py  types.py  xyz_parser.py
molop/io/QM_models/: G16LogFile.py  G16LogFileFrame.py  __init__.py
molop/io/QM_parsers/: G16LogFileFrameParser.py  G16LogFileParser.py  __init__.py
molop/io/base_models/: Bases.py  ChemFile.py  ChemFileFrame.py  DataClasses.py  FileParser.py  FrameParser.py  Mixins.py  Molecule.py  SearchPattern.py
molop/io/bases/: BaseMolFileParser.py  BaseMolFrame.py  BaseMolFrameParser.py  BasePattern.py  DataClasses.py  MolBlock.py  file_base.py  molblock_base.py
molop/io/coords_file/: GJFBlockParser.py  GJFFileParser.py  GJFFrameParser.py  SDFBlockParser.py  (+9 more)
molop/logger/: logger.py
molop/mol/: __init__.py  molecule.py
molop/spatial/: mesh.py
molop/structure/: FormatConverter.py  GeometryTransformation.py  GraphReconstruction.py  StructureTransformation.py  geometry.py  structure.py  structure_recovery.py  structure_recovery_alter.py  structure_recovery_deprecated.py  utils.py
molop/unit/: __init__.py
molop/utils/: __init__.py  consts.py  draw.py  errors.py  functions.py  g16patterns.py  geometry.py  progressbar.py  structure.py  types.py  xtbpatterns.py
scripts/: generate_chemfile_format_transform_stubs.py  generate_cli_transform_stubs.py  generate_io_typing_catalog.py  mkdocs_hooks.py
src/molop/: __init__.py
test/: test.sdf  test.xyz
tests/: _helpers_structure.py  test_autoparser_orcainp_tmpfile.py  test_autoparser_sdf_tmpfile.py  test_autoparser_smi_tmpfile.py  test_cli_parse_state_machine.py  test_cml_codec.py  test_codec_registry_catalog_and_decorators.py  test_common_qm_data_containers.py  test_config.py  test_config_more.py  test_coordinate_container.py  test_filebatchmodeldisk_codec_filter.py  test_format_transform_output_dir.py  test_g16_log.py  test_g16gjf_fixtures_coverage.py  test_g16log_link1_metadata.py  test_g16log_mo_regression.py  test_g16log_numeric_regression.py  test_g16log_parser_v3_node_payloads.py  test_g16log_parser_v3_regression.py  test_g16log_parser_v3_render.py  test_g16log_parser_v3_tree.py  test_gaussian_route_semantics.py  test_gjf_include_handling.py  test_gjf_spec_cases.py  test_gjf_spec_strictness.py  test_io_convert_registry_smoke.py  test_io_registry_and_batch_more.py  test_orca_output_fixtures.py  test_orcainp_fixtures_roundtrip.py  test_parsers_smoke.py  test_structure_format_converter.py  test_structure_format_features.py  test_structure_geometry_transformation.py  test_structure_graph_reconstruction.py  test_structure_public_api.py  test_structure_smoke.py  test_structure_structure_transformation.py  test_structure_utils.py  test_stub_generators_invariants.py  (+5 more)
tests/format_feature_coverage/: __init__.py  support_matrix.py  test_support_matrix.py
tests/test_files/: S_Ph_Ni_TS.gjf  add_0.fchk  xtb_6_1_opt.out
tutorial/: class_design.md  get_start.ipynb  notes.md  rdDetermineBonds_cannot_do.ipynb  test.sdf  test.xyz  test_cases.ipynb  units.ipynb
(+872 files in other folders)
