[tool.poetry]
name = "molop"
version = "0.1.32.1"
description = "Molcule OPerator"
authors = ["tmj <mj_t@zju.edu.cn>"]
license = "MIT"
maintainers = ["tmj <mj_t@zju.edu.cn>"]
readme = "README.md"
repository = "https://github.com/gentle1999/MolOP"
keywords = ["cheminformatics", "xyz2mol", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
openbabel-wheel = "^3.1.1.19"
tqdm = "^4.66.4"
joblib = "^1.4.2"
fire = "^0.6.0"
pydantic = "^2.7.4"
numpy = "^1.24.2,<2.0.0"
pandas = "^2.0.0"
pint = "^0.21.0"
rdkit = ">=2023.9.6"
scipy = "^1.8"
packaging = "^24.0"

mordred = { version = "^1.2", optional = true }
dscribe = { version = "^2.1", optional = true }
ase = { version = "^3.22", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.7"
mkdocs-material-extensions = "^1.3.1"
mkdocs-static-i18n = "^1.2.0"
mkdocstrings-python = "^1.8.0"
pytest = "^8.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "~6.4.12"
nbconvert = "^7.14.2"

[tool.poetry.extras]
desc = ["mordred", "dscribe", "ase"]
full = [
    "mordred",
    "dscribe",
    "ase",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
molop = "molop.cli.cli:app"