[project]
name = "molop"
version = "0.2.0-dev1"
description = "Molcule OPerator"
authors = [{ name = "tmj", email = "mj_t@zju.edu.cn" }]
requires-python = ">=3.10" # python 3.10 or later, follow the main dependence of rdkit
readme = "README.md"
license = "MIT"
maintainers = [{ name = "tmj", email = "mj_t@zju.edu.cn" }]
keywords = [
    "cheminformatics",
    "xyz2mol",
    "parser",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire>=0.7.0",
    "joblib>=1.5.1",
    "numpy>=1.26.4",
    "openbabel-wheel>=3.1.1.22",
    "pandas>=2.3.1",
    "pint>=0.24.4",
    "pydantic>=2.11.7",
    "rdkit>=2023.9.6",
    "regex<=2025.7.33",
    "scipy>=1.15.3",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
desc = [
    "mordred~=1.2",
    "dscribe~=2.1",
    "ase~=3.22",
]
full = [
    "mordred~=1.2",
    "dscribe~=2.1",
    "ase~=3.22",
]

[project.urls]
Repository = "https://github.com/gentle1999/MolOP"

[project.scripts]
molop = "molop.cli.cli:app"

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.7,<10",
    "mkdocs-material-extensions>=1.3.1,<2",
    "mkdocs-static-i18n>=1.2.0,<2",
    "mkdocstrings-python>=1.8.0,<2",
    "pytest>=8.0.0,<9",
    "jupyter-contrib-nbextensions>=0.7.0,<0.8",
    "notebook~=6.4.12",
    "nbconvert>=7.14.2,<8",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests", "scripts"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "hong"
url = "http://10.72.201.58:13000/api/packages/tmj/pypi/simple/"
publish-url = "http://10.72.201.58:13000/api/packages/tmj/pypi/"
explicit = true
